feat(ionic-feedback-module-app): use mock for shake

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
 
-	<div text-center class="shake-me">Shake does not work in browser</div>
+	<div text-center class="shake-me">Rotate to simulate shaking</div>
 
 	<ion-button expand="block" (click)="openFeedback()">
 		<ion-icon slot="start" name="outlet"></ion-icon>
